--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --main-color: #50c878;
+  /* --secondary-color: #00b99c; */
+  --secondary-color: #c850a0;
+  --analogous: #64c850;
+  --analogous2: #50c8b4;
+  --triadic: #50a0c8;
+  --text-color: #444;
+  --gradient: linear-gradient(to right top, #50c878, #3ec583, #2cc18c, #00b99c);
+  --glass: rgba(255, 255, 255, 0.225);
+  --box-shadow: 0px 10px 60px rgb(0 0 0 /8%);
 }
